// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box edge-cases handles null child in children array 1`] = `
<div
  className="sc-chPdSV jRuPny"
  data-name="Box"
/>
`;

exports[`Box structure Renders correct structure when no spacing 1`] = `
<div
  className="sc-bwzfXH iLFntR"
  data-name="Box"
>
  Text
</div>
`;

exports[`Box structure Renders correct structure when spacing AND children length > 1 1`] = `
<div
  className="sc-bZQynM ilqCzY"
  data-name="Box"
>
  <div
    className="sc-gzVnrw fddkIu"
    data-name="BoxChildren"
  >
    <div
      className="sc-htoDjs ieYwg"
      data-name="BoxChild"
    >
      <div
        isChild={true}
      >
        Text 1
      </div>
    </div>
    <div
      className="sc-htoDjs ieYwg"
      data-name="BoxChild"
    >
      <div
        isChild={true}
      >
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Box structure Renders correct structure when spacing AND children length > 1 and children are Box 1`] = `
<div
  className="sc-dnqmqq jLEFYc"
  data-name="Box"
>
  <div
    className="sc-iwsKbI gIBXeV"
    data-name="BoxChildren"
  >
    <div
      className="sc-gZMcBi dnGCkP"
      data-name="BoxChild"
    >
      <div
        className="sc-VigVT fuQzMH"
        data-name="Box"
      >
        Text 1
      </div>
    </div>
    <div
      className="sc-gZMcBi dnGCkP"
      data-name="BoxChild"
    >
      <div
        className="sc-jzJRlG ewZitb"
        data-name="Box"
      >
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`Box structure Renders correct structure when spacing BUT children length === 1 1`] = `
<div
  className="sc-ifAKCX eXaVbb"
  data-name="Box"
>
  Text
</div>
`;
